php fixes
git-svn-id: svn://svn.caucho.com/resin/trunk@5063 9c94448d-38f1-0310-a231-d98308ff1ebf